# sticky-print

./: CHANGELOG.md  LICENSE  README.md  justfile  sticky-print.cabal
.github/workflows/: ci.yml
app/: Example.hs
src/: StickyPrint.hs
src/StickyPrint/: Simple.hs
test/: Spec.hs
