cabal-version:       3.0
name:                sticky-print
version:             0.0.0.0
synopsis:            An output that sticks to the bottom of the terminal while the rest of your logs scroll by
description:
    An output that sticks to the bottom of the terminal while the rest of your logs scroll by.
    See [README.md](https://github.com/madjar/sticky-print#sticky-print) for more details.
homepage:            https://github.com/madjar/sticky-print
bug-reports:         https://github.com/madjar/sticky-print/issues
license:             MIT
license-file:        LICENSE
author:              Georges Dubus
maintainer:          Georges Dubus <georges.dubus@hey.com>
copyright:           2022 Georges Dubus
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7
                     GHC == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/madjar/sticky-print.git

common common-options
  build-depends:       base >= 4.14.3.0 && < 4.16

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     StickyPrint

test-suite sticky-print-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       sticky-print
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
